UPDATE: refactoring testing technique to testing flows with onStart{} and turbine